--- a/code/style.css
+++ b/code/style.css
@@ -1,513 +1,449 @@
 :root{
-  --firstly-color: #d94ffc;
-  --secondly-color:#fff;
-  --tiredly-color:#1a1717;
-  --fourthly-color:#fcf3ff;
-  --heading-font-family: "Playfair Display", serif;
-  --default-font-family: "Poppins", sans-serif;
+--firstly-color: #d94ffc;
+--secondly-color:#fff;
+--tiredly-color:#1a1717;
+--fourthly-color:#fcf3ff;
+--heading-font-family: "Playfair Display", serif;
+--default-font-family: "Poppins", sans-serif;
 }
 *, *:before, *:after {
-  margin: 0;
-  box-sizing: border-box;
+margin: 0;
+box-sizing: border-box;
 }
 
 body {
-  background: var(--secondly-color);
-  color:var(--tiredly-color);
-  font-family: var(--default-font-family);
+background: var(--secondly-color);
+color:var(--tiredly-color);
+font-family: var(--default-font-family);
 }
 main {
-  padding: 0 0.5rem;
+padding: 0 0.5rem;
 }
 
 a {
-  color: var(--tiredly-color);
-  text-decoration: none;
+color: var(--tiredly-color);
+text-decoration: none;
 }
 
 h3, h1{
-  font-family: var(--heading-font-family);
+font-family: var(--heading-font-family);
 }
 h3{
-  border-bottom: 0.25rem solid var(--firstly-color);
-  color: var(--tiredly-color);
-  font-size:1rem;
-  display: inline;
-  letter-spacing: 0.1em;
-  z-index: 2;
-  margin-top: 1rem;
+border-bottom: 0.25rem solid var(--firstly-color);
+color: var(--tiredly-color);
+font-size:1rem;
+display: inline;
+letter-spacing: 0.1em;
+
 }
-/*----Style for  nav bar-----*/
+/*----Style for nav bar-----*/
+.header{
+position: fixed;
+top: 0;
+left: 0;
+width: 100%;
+z-index: 1;
+}
+
 .navbar-links {
-  display: none;
-  font-size: 2rem;
+display: none;
+font-size: 1rem;
 }
 
 .nav-toggle-label {
-  display: block;
+display: block;
 }
 .nav-toggle-label span {
-  display: block;
-  width: 1.563rem;
-  height: 0.188rem;
-  background-color: var(--secondly-color);
-  margin: 0.313rem 0;
+display: block;
+width: 1.563rem;
+height: 0.188rem;
+background-color: var(--secondly-color);
+margin: 0.313rem 0;
 }
 
 /* Hide the hamburger menu on startup */
 #nav-toggle:not(:checked) ~ .navbar-links {
-  display: none;
+display: none;
 }
 
 /* Show the hamburger menu below when clicking on the icon */
 #nav-toggle:checked ~ .navbar-links {
-  display: flex;
-  flex-direction: column;
-  position: absolute;
-  top: 100%;
-  left: 0;
-  background-color: var(--firstly-color);
-  padding: 0.625rem;
-  width: 100%;
+display: flex;
+flex-direction: column;
+position: absolute;
+top: 100%;
+left: 0;
+background-color: var(--firstly-color);
+padding: 0.625rem;
+width: 100%;
 }
 
 .navbar {
-  background-color: var(--firstly-color);
-  color: var(--secondly-color);
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0.625rem 1.25rem;
-  position: relative;
+background-color: var(--firstly-color);
+color: var(--secondly-color);
+display: flex;
+justify-content: space-between;
+align-items: center;
+padding: 0.1rem 1rem;
+position: relative;
 }
 
-
-
 .navbar-links {
-  list-style: none;
-  display: flex;
-  margin: 0;
-  padding: 0;
+list-style: none;
+display: flex;
+margin: 0;
+padding: 0;
 }
 
 .navbar-links li {
-  margin-left: 1.25rem;
+margin-left: 1.25rem;
 }
 
 .navbar-links a {
-  color: var(--secondly-color);
-  text-decoration: none;
+color: var(--secondly-color);
+text-decoration: none;
 }
 
 .nav-toggle {
-  display: none;
+display: none;
 }
 .navbar-logo{
-  display: flex;
-  align-items: center;
+display: flex;
+align-items: center;
 }
 .navbar-logo p {
-  font-size: 2rem;
-  padding-left: 1rem;
+font-size: 1rem;
+padding-left: 1rem;
 }
 .navbar-logo a{
-  text-decoration: none;
-  color: var(--secondly-color);
+text-decoration: none;
+color: var(--secondly-color);
 }
 .logo-nav {
-  width: 4.2rem;
-  object-fit: cover;
-  margin-left: 1.5rem;
-  margin-right: 0.3rem;
+width: 4.2rem;
+object-fit: cover;
+margin-left: 1.5rem;
+margin-right: 0.3rem;
 }
-   /*-----Style for big new----*/
-   .big-news{
-    margin: 1rem 0;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-column-gap: 1.5rem;
-    padding: 1rem 1rem;
-    background-color: var(--fourthly-color);
-   }
-
-   .highlights-dish {
-    max-width: 100%;
-    object-fit: cover;
+/*-----Style for big new----*/
+.big-news{
+margin-top: 6rem ;
+margin-bottom: 2rem;
+display: grid;
+grid-template-columns: 1fr;
+grid-column-gap: 1.5rem;
+padding: 1rem 1rem;
+background-color: var(--fourthly-color);
+text-align: center;
+}
+.highlights-news {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  
   }
 
-  .highlights-dish:hover {
-    transform: scale(1.1);
-  }
+.highlights-dish {
+max-width: 100%;
+object-fit: cover;
+padding-bottom: 1rem;
 
-  /*-----Style for oder news-----*/
-/* animation  */
+}
+
+.highlights-dish:hover {
+transform: scale(1.1);
+}
+.highlights-name{
+padding-top: 1rem;
+}
+.highlights-paragraph{
+  text-align: center;
+  line-height: 1.5;
+}
+.highlights-news a {
+  text-decoration: none;
+  }
+/*-----Style for oder news-----*/
+/* animation */
 h4{
-  border-bottom: 0.25rem solid var(--firstly-color);
-  color: var(--tiredly-color);
-  display: inline;
-  letter-spacing: 0.1em;
-  z-index: 2;
+border-bottom: 0.25rem solid var(--firstly-color);
+color: var(--tiredly-color);
+display: inline;
+letter-spacing: 0.1em;
+z-index: 2;
 
 }
 .animation-header {
-  overflow: hidden;
-  white-space: nowrap;
-  font-size: 1rem;
-  text-align: center;
-  width: 100%;
+overflow: hidden;
+white-space: nowrap;
+font-size: 1rem;
+text-align: center;
+width: 100%;
 }
-
 
 @keyframes ticker {
-  0% {
-    transform: translateX(calc(-100% - 35vw)) ;
-  }
-  100% {
-    transform: translateX(calc(100% + 35vw));
-  }
+0% {
+transform: translateX(calc(-100% - 35vw)) ;
+}
+100% {
+transform: translateX(calc(100% + 35vw));
+}
+}
+
+.animation-header h4 {
+display: inline-block;
+animation: ticker 15s linear infinite;
+}
+
+.other-news{
+display: grid;
+grid-template-columns: 1fr;
+text-align: center;
+grid-gap: 3rem;
+margin: 1rem;
+
+}
+.other-news .random-news img{
+object-fit: cover;
+width: 100%;
+height: 30rem;
+box-shadow: 0rem 0.15rem 0.3rem rgba(0, 0, 0, 0.5);
+
+}
+.other-news .random-news img:hover {
+transform: scale(1.1);
+}
+
+.other-news a {
+text-decoration: none;
+}
+.other-heading{
+font-size: 1rem;
+text-align: center;
+padding: 2rem;
+}
+.other-heading:hover{
+color: var(--firstly-color);
+text-shadow: 0 0 0.313rem var(--firstly-color);
+
+}
+
+.random-news{
+padding: 1rem;
+background-color: var(--fourthly-color);
+}
+
+/*------Style for footer-----*/
+.copyright{
+background-color: var(--firstly-color);
+color: var(--secondly-color);
+padding: 3.125rem;
+text-align: center;
+}
+.copyright p{
+font-size: 0.6rem;
+color: var(--secondly-color);
+}
+.technigo{
+width: 1.2rem;
+}
+.social-links{
+display: flex;
+justify-content: center;
+}
+footer .social-links a{
+
+border:0.063rem solid var(--branding-color);
+padding: 0.2rem 0.5rem;
+font-size: 1.2rem;
+color: var(--fourthly-color);
+transition: all 100ms ease-in-out;
+}
+
+/* ------------------------------------------------------Media Query for desktop
+------------------------------------------------------*/
+@media (min-width: 1025px) {
+
+main {
+padding: 0 6rem;
+}
+
+h3{
+font-size: 2rem;
+
+}
+/*-----Style for nav bar-----*/
+
+.navbar-links {
+list-style: none;
+display: flex;
+margin: 0;
+padding: 0;
+
+}
+
+.navbar-links li {
+margin-left: 1.25rem;
+border-bottom: 0.25rem solid var(--fourthly-color);
+color: var(--tiredly-color);
+display: inline;
+letter-spacing: 0.1rem;
+z-index: 2;
+}
+
+.navbar-links li:hover {
+margin-left: 1.25rem;
+border-top: 0.25rem solid var(--fourthly-color);
+border-bottom: none;
+color: var(--tiredly-color);
+display: inline;
+letter-spacing: 0.1rem;
+z-index: 2;
+opacity: 0.7;
+
+}
+
+.navbar-links a {
+color:var(--secondly-color);
+text-decoration: none;
+}
+
+.nav-toggle {
+display: none;
+}
+.nav-toggle-label {
+display: none;
+}
+
+#nav-toggle:not(:checked) ~ .navbar-links {
+display: flex;
+}
+/*-----Style for big new-----*/
+.big-news {
+grid-template-columns: 3fr 3fr;
+align-items: center;
+display: grid;
+grid-column-gap: 1rem;
+
 }
 
 
-.animation-header h4 {
-  display: inline-block;
-  animation: ticker 15s linear infinite;
+.highlights-paragraph {
+  padding-top: 3rem;
+}
+
+.highlights-name {
+font-size: 3rem;
+display: inline-block;
+padding-top: 1rem;
+}
+
+/*-------Style for oder news-------*/
+
+/* animation */
+.animation-header {
+font-size: 3rem;
 }
 
 
 .other-news{
-  display: grid;
-  grid-template-columns:  1fr;
-  text-align: center;
-  grid-gap: 3rem;
-  margin: 1rem;
-  
-}
-.other-news .random-news img{
-  object-fit: cover;
-  width: 100%;
-  height: 30rem;
-  box-shadow: 0rem 0.15rem 0.3rem rgba(0, 0, 0, 0.5);
-  
-}
-.other-news .random-news img:hover {
-  transform: scale(1.1); 
+display: grid;
+grid-template-columns: repeat(4, 1fr);
+text-align: center;
+grid-gap: 1rem;
+margin: 1rem;
+
 }
 
-
-.other-news a {
-  text-decoration: none;
-}
-.other-paragraph{
-  font-size: 1rem;
-  text-align: center;
-  padding: 2rem;
-}
-.other-paragraph:hover{
-  color: var(--firstly-color);
-  border-bottom: 0.25rem solid var(--firstly-color);
-  display: inline;
-  letter-spacing: 0.1em;
-  z-index: 2;
-  
+.other-heading{
+font-size: 1.1rem;
 }
 
 .random-news{
-  padding: 1rem;
-  background-color: var(--fourthly-color);
-}
-
-  /*------Style for footer-----*/
-  .copyright{
-    background-color: var(--firstly-color);
-    color: var(--secondly-color);
-    padding: 3.125rem;
-    text-align: center;
-    }
-    .copyright p{
-      font-size: 1rem;
-      color:  var(--secondly-color);
-    }
-    .technigo{
-    width: 3rem;
-    }
-    .social-links{
-      display: flex;
-      justify-content: center;
-    }
-    footer .social-links a{
-      margin: 0 1.25rem;
-      border:0.063rem solid var(--branding-color);
-      padding: 0.4rem 0.4rem;
-      font-size: 3rem;
-      color:  var(--fourthly-color);
-      transition: all 100ms ease-in-out;
-    }
-
-/* ------------------------------------------------------Media Query  for desktop ------------------------------------------------------*/
-@media (min-width: 1025px) {
-
-  main {
-    padding: 0 6rem;
-  }
-  h1{
-    text-align: center;
-    padding: 3rem;
-    font-size: 4rem;
-  }
-  h3{
-  border-bottom: 0.25rem solid var(--firstly-color);
-  color: var(--tiredly-color);
-  font-size: 2.5em;
-  display: inline;
-  letter-spacing: 0.1em;
-  z-index: 2;
-  }
-/*-----Style for  nav bar-----*/
-
-  .navbar-links {
-    list-style: none;
-    display: flex;
-    margin: 0;
-    padding: 0;
-
-  }
-
-  .navbar-links li {
-    margin-left: 1.25rem;
-    border-bottom: 0.25rem solid var(--fourthly-color);
-  color: var(--tiredly-color);
-  display: inline;
-  letter-spacing: 0.1em;
-  z-index: 2;
-  }
-
-  .navbar-links li:hover {
-    margin-left: 1.25rem;
-    border-top: 0.25rem solid var(--fourthly-color);
-    border-bottom: none;
-  color: var(--tiredly-color);
-  display: inline;
-  letter-spacing: 0.1em;
-  z-index: 2;
-  opacity: 0.7;
-
-  }
-
-  .navbar-links a {
-    color:var(--secondly-color);
-    text-decoration: none;
-  }
-
-  .nav-toggle {
-    display: none;
-  }
-  .nav-toggle-label {
-    display: none;
-}
-
-#nav-toggle:not(:checked) ~ .navbar-links {
-  display: flex;
-}
-  /*-----Style for big new-----*/
-  .big-news {
-    grid-template-columns: 3fr 3fr;
-    background-color: var(--fourthly-color);
-    align-items: center;
-    margin: 1rem 0;
-    display: grid;
-    grid-column-gap: 1rem;
-    background-color: var(--fourthly-color);
-  }
-
-  .highlights-news {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-  }
-
-  .highlights-paragraph {
-    padding-left: 2rem;
-    padding-top: 5rem;
-    text-align: center;
-    line-height: 1.5;
-    font-size: 2rem;
-  }
-
-  .highlights-news a {
-    text-decoration: none;
-  }
-
-
-
-   .highlights-name {
-
-    font-size: 4rem;
-    display: inline-block;
-  }
-
-
-
-/*-------Style for oder news-------*/
-
-
-/* animation  */
-h4{
-  border-bottom: 0.25rem solid var(--firstly-color);
-  color: var(--tiredly-color);
-  display: inline;
-  letter-spacing: 0.1em;
-  z-index: 2;
-
-}
-.animation-header {
-  overflow: hidden;
-  white-space: nowrap;
-  font-size: 3em;
-  text-align: center;
-  width: 100%;
-}
-
-
-@keyframes ticker {
-  0% {
-    transform: translateX(calc(-100% - 35vw)) ;
-  }
-  100% {
-    transform: translateX(calc(100% + 35vw));
-  }
-}
-
-
-.animation-header h4 {
-  display: inline-block;
-  animation: ticker 15s linear infinite;
-}
-
-
-  .other-news{
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    text-align: center;
-    grid-gap: 3rem;
-    margin: 1rem;
-
-  }
-  /* .other-news .random-news img{
-    object-fit: cover;
-    width: 100%;
-    height: 30rem;
-    box-shadow: 0rem 0.15rem 0.3rem rgba(0, 0, 0, 0.5);
-
-  }
-  .other-news .random-news img:hover {
-    transform: scale(1.1);
-  }
-
-
-  .other-news a {
-    text-decoration: none;
-  } */
-  .other-paragraph{
-    font-size: 3rem;
-    /* text-align: center;
-    padding: 2rem; */
-  }
-  
-
-  .random-news{
-    padding: 1rem;
-    grid-column: span 3;
-    background-color: var(--fourthly-color);
-  }
-
-
-  /*------Style for footer-------*/
-  .copyright{
-  background-color: var(--firstly-color);
-  color: var(--secondly-color);
-  padding: 3.125rem;
-  text-align: center;
-  }
-  .copyright p{
-    font-size: 2rem;
-    color:  var(--secondly-color);
-  }
-  .technigo{
-  width: 4.2rem;
-  }
-  .social-links{
-    display: flex;
-    justify-content: center;
-  }
-  footer .social-links a{
-    margin: 0 1.25rem;
-    border: 0.063rem solid var(--branding-color);
-    padding: 0.625rem 0.875rem;
-    font-size: 4rem;
-    color:  var(--fourthly-color);
-    transition: all 100ms ease-in-out;
-  }
+padding: 1rem;
+grid-column: span 1;
 
 }
 
-/* ------------------------------------------------------Media Query for (Tablet)------------------------------------------------------ */
+/*------Style for footer-------*/
+.copyright p{
+font-size: 1.2rem;
 
+}
+.technigo{
+width: 2.5rem;
+}
+
+footer .social-links a{
+padding: 0.625rem 1rem;
+font-size: 2rem;
+}
+
+}
+
+/* ------------------------------------------------------Media Query for
+(Tablet)------------------------------------------------------ */
 
 @media (min-width: 667px) and (max-width: 1024px) {
- /*----Style for  nav bar-----*/
+/*----Style for nav bar-----*/
 
-  .navbar-links {
-      display: none;
-  }
-
-  .nav-toggle-label {
-      display: block;
-  }
-
-  .nav-toggle-label span {
-      display: block;
-      width: 1.563rem;
-      height: 0.188rem;
-      background-color: var(--secondly-color);
-      margin: 0.313rem 0;
-  }
-
-  /* Hide the hamburger menu on startup */
-  #nav-toggle:not(:checked) ~ .navbar-links {
-      display: none;
-  }
-
-  /* Show the hamburger menu below when clicking on the icon */
-  #nav-toggle:checked ~ .navbar-links {
-      display: flex;
-      flex-direction: column;
-      position: absolute;
-      top: 100%;
-      left: 0;
-      background-color: var(--firstly-color);
-      padding: 0.625rem;
-      width: 100%;
-  }
-    /*------Style for big new-----*/
-  .big-news{
-    
-    grid-template-columns: 1fr 1fr;
-
-  }
-  /*-----Style for oder news-----*/
-  .other-news{
-  
-    grid-template-columns: 1fr 1fr;
- 
-  
-
-  }
-  /*-----Style for footer------*/
+.navbar-links {
+display: none;
 }
 
+.nav-toggle-label {
+display: block;
+}
 
+.nav-toggle-label span {
+display: block;
+width: 1.563rem;
+height: 0.188rem;
+background-color: var(--secondly-color);
+margin: 0.313rem 0;
+}
 
+/* Hide the hamburger menu on startup */
+#nav-toggle:not(:checked) ~ .navbar-links {
+display: none;
+}
 
+/* Show the hamburger menu below when clicking on the icon */
+#nav-toggle:checked ~ .navbar-links {
+display: flex;
+flex-direction: column;
+position: absolute;
+top: 100%;
+left: 0;
+background-color: var(--firstly-color);
+padding: 0.625rem;
+width: 100%;
+}
+/*------Style for big new-----*/
+.big-news{
 
+grid-template-columns: 1fr 1fr;
+
+}
+/*-----Style for oder news-----*/
+.other-news{
+
+grid-template-columns: 1fr 1fr;
+
+}
+/*-----Style for footer------*/
+.copyright p{
+font-size: 1rem;
+
+}
+.technigo{
+width: 3rem;
+}
+footer .social-links a{
+font-size: 2rem;
+padding: 0.2rem 1rem;
+
+}
+}
