--- a/code/style.css
+++ b/code/style.css
@@ -13,16 +13,11 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
-}
-
-.main-nav {
-  align-self: right;
-  display: flex;
+  flex-flow: row;
 }
 
 ul {
   list-style-type: none;
-  overflow: hidden;
   display: none;
 }
 
@@ -32,12 +27,7 @@ li {
 }
 
 .menu label {
-  /*display: none;*/
   cursor: pointer;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-  display: flex;
 }
 
 #menu {
@@ -46,6 +36,7 @@ li {
 
 a {
   text-decoration: none;
+  color: black;
   /*display: block;*/
 }
 
@@ -58,7 +49,7 @@ p {
 .big-news {
   margin: 20px 0;
   display: grid;
-  grid-template-rows: 25% 50% 25%;
+  grid-template-rows: auto;
   grid-template-columns: 1fr;
   align-items: center;
   justify-content: center;
@@ -129,12 +120,17 @@ footer {
   ul {
     display: contents;
     display: flex;
-    align-items: center;
-    justify-content: flex-end;
   }
 
   li {
     padding: 10px;
+  }
+
+  nav ul li button {
+    border-radius: 30%;
+    padding: 10px;
+    background-color: gold;
+    border-style: dotted;
   }
 }
 
