--- a/code/style.css
+++ b/code/style.css
@@ -8,7 +8,7 @@ body {
   margin: 20px;
 }
 
-/*All things header coming up*/
+/*All things header*/
 
 .header {
   display: flex;
@@ -66,7 +66,7 @@ h2 {
   text-align: center;
 }
 
-/*Big News coming up*/
+/*Big News*/
 
 .big-news {
   margin: 20px 0;
@@ -85,7 +85,7 @@ img {
   object-fit: cover;
 }
 
-/*other news coming up*/
+/*other news*/
 
 .other-news {
   margin: 20px 0;
@@ -119,7 +119,7 @@ footer {
   align-items: center;
 }
 
-/*Responsive Design coming up */
+/*Responsive Design*/
 
 @media (min-width: 668px) {
   .other-news {
