--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,87 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #F7EDE2;
+  color: #060606;
+}
+
+body {
+  margin: 0px;
+  padding: 0px;
+}
+
+header {
+  background: #84A59D;
+  color: white;
+  margin: 0px;
+  padding: 20px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.horizontal-list {
+  list-style: none;
+  display: inline-block;
+  padding: 16px;
+  text-decoration: none;
+}
+
+section {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
+}
+
+.news-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 25%);
+}
+
+.news-item {
+  border: solid green 2px;
+  background-color: #F5CAC3;
+  padding: 5px;
+}
+
+.news-item h3 {
+  padding: 0 10px;
+  margin: 0;
+}
+
+.news-item p {
+  padding: 0 10px;
+  margin: 0;
+}
+
+.news-item img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+h1 {
+  margin: 0px;
+  padding: 0px;
+  border: solid blue 2px;
+}
+
+.big-news {
+  border: solid red 2px;
+  background-color: white;
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+
+.big-news-text {
+  padding: 50px;
+}
+
+.big-news-image {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+footer {
+  background: green;
+  color: white;
+  margin: 0px;
+  padding: 0px;
 }
