--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,226 @@
-html {
-  background: #0025ff;
-  color: #fff;
+* {
+  font-family: "modern sans"; 
+  box-sizing: border-box;
 }
+
+body {
+  min-height: 100vh;
+ display: flex;
+ flex-direction: column;
+}
+
+header {
+  position: sticky;
+  top: 0;
+  width: 100%;
+  background-color: white;
+}
+
+.header-container {
+display: flex;
+justify-content: space-between;
+align-items: center;
+margin: 2px 2px 2px 10px;
+
+}
+
+@media (max-width: 800px) {
+  .header-container {
+  flex-direction: column;
+
+}
+}
+
+.topnav {
+  overflow: hidden;
+}
+.topnav a {
+  float: inline-start;
+  color: grey;
+  text-align: left;
+  padding: 10px;
+  margin-right: 20px;
+  text-decoration: none;
+  font-family: "modern sans";
+  font-size: 17px;
+}
+.topnav a:hover {
+  background-color: rgb(140, 155, 139);
+  color: white;
+  border-radius: 20px;
+
+
+}
+
+@media (max-width: 600px) {
+  .topnav {
+  padding: 15px;
+  flex-direction: column;
+
+}
+}
+
+h1 {
+  color: black;
+  float: left;
+}
+.newsFront {
+  display: flex;
+  flex-direction: row;
+}
+
+@media (max-width: 800px) {
+  .newsFront {
+  padding: 15px;
+  flex-direction: column;
+  align-items: center;
+}
+}
+
+.slideshow-container {
+  width: 70%;
+}
+
+.mySlides {
+  display: none;
+  width: 100%;
+  height: auto;
+  max-height: 1000px;
+}
+
+@media screen and (max-width: 800px) {
+  .slideshow-container {
+    width: 100%;
+    max-width: 100%;
+  }
+}
+
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+.slideText {
+  border: 1px solid;
+  width: 30%;
+  margin-left: 10px;
+}
+
+@media screen and (max-width: 800px) {
+  .slideText {
+    width: 100%;
+    max-width: 100%;
+    margin-left: 0px;
+  }
+}
+
+.categories {
+  width: 70%;
+  align-self: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 15px 60px;
+  margin: 40px 100px;
+}
+
+.categoryBox {
+  width: 130px;
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid;
+  border-radius: 25%;
+}
+
+.headlines {
+  align-self: center;
+}
+
+
+.rowArticles {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px 5px;
+}
+
+.img-column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+.img-column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  
+}
+
+.img-column img:hover {
+ opacity: 0.8;
+
+
+}
+
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+    padding: 15px;
+  }
+}
+
+
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+    padding: 15px;
+  }
+}
+
+.video-section {
+  display: grid; 
+  margin-top: 50px;
+  grid-template-columns: 20% 20% 20% 20% 20%;
+  grid-template-rows: 20% 20% 20% 20% 20%;
+  height: 2000px;
+  width: 100vh;
+  gap: 30px;
+}
+
+@media screen and (max-width: 800px) {
+  .video-section {
+    display: flex;
+    flex-direction: column;
+    flex: 100%;
+    max-width: 100%;
+    padding: 15px;
+  }
+}
+
+
+.video-text-1 {
+  background-color: grey;
+  grid-column: 2 / 5;
+}
+
+.instruction-video {
+  grid-column: 5 / 6;
+}
+
+@media screen and (max-width: 800px) {
+  .instruction-video {
+  max-width: fit-content;
+  }
+}
+
+.video-text {
+  border: 1px solid;
+  grid-column: 2/ 5;
+  grid-rows: 10 / 12;
+}
+
