--- a/code/style.css
+++ b/code/style.css
@@ -1,5 +1,5 @@
 * {
-  font-family: "modern sans"; 
+  font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
 }
 
@@ -24,7 +24,7 @@ margin: 2px 2px 2px 10px;
 
 }
 
-@media (max-width: 800px) {
+@media (max-width: 767px) {
   .header-container {
   flex-direction: column;
 
@@ -41,8 +41,8 @@ margin: 2px 2px 2px 10px;
   padding: 10px;
   margin-right: 20px;
   text-decoration: none;
-  font-family: "modern sans";
-  font-size: 17px;
+  font-size: 100;
+
 }
 .topnav a:hover {
   background-color: rgb(140, 155, 139);
@@ -52,7 +52,7 @@ margin: 2px 2px 2px 10px;
 
 }
 
-@media (max-width: 600px) {
+@media (max-width: 767px) {
   .topnav {
   padding: 15px;
   flex-direction: column;
@@ -64,13 +64,13 @@ h1 {
   color: black;
   float: left;
 }
-.newsFront {
+.news-front {
   display: flex;
   flex-direction: row;
 }
 
-@media (max-width: 800px) {
-  .newsFront {
+@media (max-width: 767px) {
+  .news-front {
   padding: 15px;
   flex-direction: column;
   align-items: center;
@@ -81,14 +81,14 @@ h1 {
   width: 70%;
 }
 
-.mySlides {
+.my-slides {
   display: none;
   width: 100%;
   height: auto;
   max-height: 1000px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 767px) {
   .slideshow-container {
     width: 100%;
     max-width: 100%;
@@ -105,14 +105,14 @@ h1 {
   to {opacity: 1}
 }
 
-.slideText {
+.slide-text {
   border: 1px solid;
   width: 30%;
   margin-left: 10px;
 }
 
-@media screen and (max-width: 800px) {
-  .slideText {
+@media screen and (max-width: 767px) {
+  .slide-text {
     width: 100%;
     max-width: 100%;
     margin-left: 0px;
@@ -129,7 +129,7 @@ h1 {
   margin: 40px 100px;
 }
 
-.categoryBox {
+.category-box {
   width: 130px;
   margin: 20px;
   padding: 20px;
@@ -142,7 +142,7 @@ h1 {
 }
 
 
-.rowArticles {
+.row-articles {
   display: flex;
   flex-wrap: wrap;
   margin: 20px 5px;
@@ -165,22 +165,21 @@ h1 {
 
 }
 
-@media screen and (max-width: 800px) {
-  .column {
+@media screen and (max-width: 767px) {
+  .img-column {
     flex: 50%;
     max-width: 50%;
-    padding: 15px;
   }
 }
 
-
+/*
 @media screen and (max-width: 600px) {
-  .column {
+  .img-column {
     flex: 100%;
     max-width: 100%;
-    padding: 15px;
   }
 }
+*/
 
 .video-section {
   display: grid; 
@@ -192,7 +191,7 @@ h1 {
   gap: 30px;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 767px) {
   .video-section {
     display: flex;
     flex-direction: column;
@@ -212,7 +211,7 @@ h1 {
   grid-column: 5 / 6;
 }
 
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 767px) {
   .instruction-video {
   max-width: fit-content;
   }
@@ -221,6 +220,5 @@ h1 {
 .video-text {
   border: 1px solid;
   grid-column: 2/ 5;
-  grid-rows: 10 / 12;
 }
 
